# Multi_Launcher

./: .gitignore  CHANGELOG.md  Cargo.toml  License  README.md  actions.json  build.rs  clipboard_modifiers.json  dashboard.json  log4rs.yaml  mouse_gestures.json  settings.json
.github/workflows/: rust.yml
Resources/: windows.rc
benches/: macros_search.rs  omni_search.rs  search.rs  todo_widget_filtering.rs
docs/: clipboard_modify.md  manual-smoke-tests.md
src/: _deprecated_draw_stub.rs  actions.rs  actions_editor.rs  add_action_dialog.rs  add_bookmark_dialog.rs  bookmark_alias_dialog.rs  brightness_dialog.rs  clipboard_dialog.rs  clipboard_modify.rs  common.rs  cpu_list_dialog.rs  draw.rs  file_search.rs  global_hotkey.rs  gui.rs  help_window.rs  history.rs  hotkey.rs  indexer.rs  launcher.rs  lib.rs  linking.rs  logging.rs  main.rs  muscle_mapping.rs  note_todo_sync.rs  note_ui_state.rs  notes_dialog.rs  plugin.rs  plugin_editor.rs  plugins_builtin.rs  process.rs  settings.rs  settings_editor.rs  shell_cmd_dialog.rs  snippet_dialog.rs  sound.rs  system_hotkey.rs  text_transform.rs  timer_dialog.rs  (+10 more)
src/actions/: bookmarks.rs  calc.rs  clipboard.rs  exec.rs  fav.rs  folders.rs  history.rs  keys.rs  layout.rs  media.rs  mod.rs  notes.rs  rss.rs  screenshot.rs  shell.rs  snippets.rs  stopwatch.rs  system.rs  tempfiles.rs  timer.rs  todo.rs
src/clipboard_modify/: actions.rs  catalog.rs  clipboard.rs  config.rs  coordinator.rs  defaults.rs  error.rs  executor.rs  help.rs  migrate.rs  model.rs  parser.rs  pipeline.rs  runtime.rs  store.rs  watch.rs
src/common/: atomic_file.rs  command.rs  config_files.rs  entity_ref.rs  file_dialog.rs  json_watch.rs  lru.rs  mod.rs  query.rs  slug.rs
src/dashboard/: config.rs  dashboard.rs  data_cache.rs  diagnostics.rs  layout.rs  mod.rs
src/draw/: capture.rs  composite.rs  controller.rs  history.rs  input.rs  keyboard_hook.rs  messages.rs  mod.rs  model.rs  monitor.rs  overlay.rs  perf.rs  render.rs  save.rs  service.rs  settings.rs  settings_store.rs  settings_ui.rs  state.rs  toolbar.rs  toolbar_icons.rs
src/file_search/: actions.rs  coordinator.rs  discovery.rs  error.rs  everything.rs  executor.rs  export.rs  matching.rs  model.rs  native.rs  path_identity.rs  preview.rs  query.rs  ripgrep.rs  settings.rs  sorting.rs  test_fixtures.rs  walkdir.rs
src/graph/: mod.rs  note_graph.rs
src/gui/: actions.rs  add_action_dialog.rs  add_bookmark_dialog.rs  alias_dialog.rs  bookmark_alias_dialog.rs  brightness_dialog.rs  calendar_event_details.rs  calendar_event_editor.rs  calendar_popover.rs  clipboard_dialog.rs  clipboard_modify_dialog.rs  confirmation_modal.rs  convert_panel.rs  cpu_list_dialog.rs  dashboard_editor_dialog.rs  draw_settings_dialog.rs  fav_dialog.rs  file_search_dialog.rs  file_search_preview_dialog.rs  image_panel.rs  macro_dialog.rs  mg_add_dialog.rs  mg_gesture_dialog.rs  mg_settings_dialog.rs  mod.rs  mouse_gesture_binding_dialog.rs  mouse_gesture_settings_dialog.rs  mouse_gestures_add_dialog.rs  mouse_gestures_dialog.rs  mouse_gestures_gesture_dialog.rs  mouse_gestures_settings_dialog.rs  multi_manager_actions.rs  muscle_mapping_panel.rs  note_delete_dialog.rs  note_graph_dialog.rs  note_mutation.rs  note_panel.rs  notes_dialog.rs  render.rs  rss_dialog.rs  (+17 more)
src/hotkey/: parse.rs  runtime.rs
src/launcher/: exec.rs  parse.rs  plan.rs
src/linking/: index.rs  migrate.rs  mod.rs  parse.rs  resolve.rs
src/mouse_gestures/: db.rs  engine.rs  mod.rs  overlay.rs  selection.rs  service.rs  stats.rs  usage.rs
src/multi_manager/: activation.rs  apply_capture.rs  bindings.rs  capture.rs  commands.rs  identity.rs  mod.rs  model.rs  reconnect.rs  runtime.rs  settings.rs  state.rs  store.rs  ui.rs  win.rs
src/note_todo_sync/: checklist.rs  metadata.rs  mod.rs  sync.rs
src/notes_markdown/: callouts.rs  headings.rs  links.rs  mod.rs  mutations.rs  parse.rs  sections.rs  task_list.rs
src/platform/: windows_api.rs
src/plugins/: asciiart.rs  base_convert.rs  bookmarks.rs  brightness.rs  browser_tabs.rs  calc_history.rs  calendar.rs  clipboard.rs  clipboard_modify.rs  color_picker.rs  convert_panel.rs  draw.rs  dropcalc.rs  emoji.rs  fav.rs  file_search.rs  folders.rs  help.rs  history.rs  ip.rs  keys.rs  layout.rs  layouts_storage.rs  link.rs  lorem.rs  macros.rs  media.rs  missing.rs  mod.rs  mouse_gestures.rs  multi_manager.rs  network.rs  note.rs  notes.rs  omni_search.rs  processes.rs  random.rs  recycle.rs  reddit.rs  rss.rs  (+23 more)
src/settings/: defaults.rs  io.rs  mod.rs  model.rs
src/settings_editor/: mapping.rs  render.rs  save.rs  state.rs
src/text_transform/: case.rs  development.rs  lines.rs  newlines.rs  whitespace.rs  words.rs  wrappers.rs
src/watchlist/: commands.rs  evaluator.rs  mod.rs
src/windows_layout/: apply.rs  plan.rs
tests/: asciiart_plugin.rs  auto_refresh.rs  base_convert_plugin.rs  bookmarks_plugin.rs  brightness_plugin.rs  browser_tabs_plugin.rs  calculator_plugin.rs  clipboard_modify_config.rs  clipboard_modify_help.rs  clipboard_modify_parser.rs  clipboard_modify_plugin.rs  clipboard_modify_runtime.rs  clipboard_modify_settings.rs  clipboard_persistence.rs  convert_panel_plugin.rs  dashboard_config.rs  dependency_floor_guard.rs  draw.rs  draw_runtime_binding.rs  dropcalc_plugin.rs  emoji_plugin.rs  fav_plugin.rs  file_drop.rs  file_search_e2e.rs  file_search_state.rs  focus_visibility.rs  folders_plugin.rs  follow_mouse.rs  force_hide.rs  gui_visibility.rs  help_plugin.rs  hide_after_run.rs  hide_visibility.rs  history.rs  hotkey.rs  hotkey_events.rs  hotkey_poller.rs  indexer.rs  ip_plugin.rs  is_valid_key_combo.rs  (+96 more)
tests/draw/: overlay_exit_modal_tests.rs  overlay_modal_input_tests.rs  platform_transparency_config_tests.rs  render_colorkey_tests.rs  render_premultiplied_alpha_tests.rs  (+3 more)
(+64 files in other folders)
