[package]
name = "multi_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"               # egui-based GUI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
open = "5.0"                   # Open files/folders/apps cross-platform
anyhow = "1.0"
walkdir = "2.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
exmex = "0.20"
libloading = "0.8"
notify = "6"
winit = "0.29"
once_cell = "1"
regex = "1"
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display"
] }
log = "0.4"
raw-window-handle = "0.6"
arboard = "3"
egui-toast = "0.13"
figlet-rs = "0.1"
dirs-next = "2"
shlex = "1.3"
sysinfo = "0.35"
chrono = "0.4"
notify-rust = { version = "4", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
rfd = { version = "0.15.3", default-features = false, features = ["common-controls-v6"] }
rdev = { git = "https://github.com/Narsil/rdev", rev = "c14f2dc5c8100a96c5d7e3013de59d6aa0b9eae2" }



[features]
unstable_grab = []
notify = ["notify-rust"]

[dev-dependencies]
tempfile = "3"
