[package]
name = "multi_launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "=0.27.2"               # egui-based GUI
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
fuzzy-matcher = "=0.3.7"
fst = { version = "=0.4.7", features = ["levenshtein"] }
open = "=5.3.2"                   # Open files/folders/apps cross-platform
anyhow = "=1.0.100"
walkdir = "=2.5.0"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
tracing-appender = "=0.2.3"
exmex = "=0.20.4"
libloading = "=0.8.9"
notify = "=6.1.1"
winit = "=0.29.15"
once_cell = "=1.21.3"
regex = "=1.11.3"
slug = "=0.1.6"
hashlink = "=0.8.4"
urlencoding = "=2.1.3"
url = "=2.5.7"
windows = { version = "=0.58.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display"
] }
log = "=0.4.28"
raw-window-handle = "=0.6.2"
arboard = "=3.6.1"
egui-toast = "=0.13.0"
egui_extras = "=0.27.2"
figlet-rs = "=0.1.5"
dirs-next = "=2.0.0"
shlex = "=1.3.0"
sysinfo = "=0.35.2"
chrono = "=0.4.42"
screenshots = "=0.8.10"
image = { version = "=0.24.9", default-features = false, features = ["png"] }
ipconfig = "=0.3.2"
reqwest = { version = "=0.11.27", default-features = false, features = ["blocking", "rustls-tls"] }
base64 = "=0.21.7"
hex = "=0.4.3"
rand = "=0.8.5"
lipsum = "=0.9.1"
egui_commonmark = "=0.15.0"
rfd = { version = "=0.15.4", features = ["common-controls-v6"] }
slab = "=0.4.11"
rdev = { git = "https://github.com/Narsil/rdev", rev = "c14f2dc5c8100a96c5d7e3013de59d6aa0b9eae2" }
rodio = { version = "=0.17.3", default-features = false, features = ["wav"] }

[features]
unstable_grab = []

[dev-dependencies]
tempfile = "=3.23.0"
criterion = "=0.5.1"
serial_test = "=2.0.0"

[build-dependencies]
embed-resource = "=2.5.2"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "omni_search"
harness = false
