[package]
name = "multi_launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.27"               # egui-based GUI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
fst = { version = "0.4", features = ["levenshtein"] }
open = "5.0"                   # Open files/folders/apps cross-platform
anyhow = "1.0"
walkdir = "2.4"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"
exmex = "0.20"
libloading = "0.8"
notify = "6"
winit = "0.29"
once_cell = "1"
regex = "1"
slug = "0.1"
hashlink = "0.8"
siphasher = "0.3"
urlencoding = "2"
url = "2"
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell_Common",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display"
] }
log = "0.4"
raw-window-handle = "0.6"
arboard = "3"
egui-toast = "0.13"
egui_extras = "0.27"
figlet-rs = "0.1"
dirs-next = "2"
shlex = "1.3"
sysinfo = "0.35"
chrono = "0.4"
screenshots = "0.8.10"
image = { version = "0.24", default-features = false, features = ["png"] }
ipconfig = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
base64 = "0.21"
hex = "0.4"
rand = "0.8"
lipsum = "0.9"
egui_commonmark = "0.15.0"
rfd = { version = "0.15.3", features = ["common-controls-v6"] }
slab = "0.4.11"
rdev = { git = "https://github.com/Narsil/rdev", rev = "c14f2dc5c8100a96c5d7e3013de59d6aa0b9eae2", features = ["x11"] }
rodio = { version = "0.17", default-features = false, features = ["wav"] }

[features]
unstable_grab = ["rdev/unstable_grab"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
serial_test = "2"

[build-dependencies]
embed-resource = "2"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "omni_search"
harness = false
